# RM2025_SENTRY

./: .gitignore  Readme.md  make.sh  pcl.sh  run.sh
src/DecompROS/decomp_ros_utils/: CMakeLists.txt  package.xml
src/common/: CMakeLists.txt  package.xml
src/common/src/geometry/: bspline_curve.cpp  curve.cpp  (+1 more)
src/gridmap_creator/: CMakeLists.txt  package.xml
src/gridmap_creator/launch/: test.launch
src/gridmap_creator/src/: gridmap_creator.cpp  request_publisher.cpp
src/ground_segmentation/: CMakeLists.txt  package.xml
src/ground_segmentation/src/: ground_segmentation.cc
src/linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
src/linefit_ground_segmentation_ros/launch/: segmentation.launch  segmentation_params.yaml
src/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc  ground_segmentation_test_node.cc
src/move_controller/: CMakeLists.txt  package.xml
src/move_controller/config/: costmap_common_params.yaml  global_costmap_params.yaml  initialpose.yaml  local_costmap_params.yaml  prohibition_areas.yaml
src/move_controller/include/: costmap_prohibition_layer.h  std_cout.h
src/move_controller/launch/: all.launch  amcl.launch  load_map.launch  move_controller.launch
src/move_controller/map/: RMUC.pgm  RMUC.yaml  RMUC_2024_n.pgm  RMUC_2024_n.yaml  RMUC_test.pgm  RMUC_test.yaml  beiyang.pgm  beiyang.yaml  lab.pgm  lab.yaml  lab_bei_new.pgm  lab_wei.pgm  lab_wei.yaml  shenzhen.pgm  shenzhen.yaml
src/move_controller/rviz/: move_controller.rviz
src/move_controller/src/: InitialPose.cpp  costmap_prohibition_layer.cpp  initialPose_before.cpp  initialPose_node.cpp  relocation.cpp
src/object_tracking/: CMakeLists.txt  package.xml
src/object_tracking/config/: ground_remove.yaml
src/object_tracking/launch/: test.launch
src/object_tracking/msg/: Obstacle.msg  ObstacleList.msg  Road_extract.msg  trackbox.msg
src/sentry_localization/: CMakeLists.txt  nodelets.xml  package.xml
src/sentry_localization/PCD/: registration.pcd  scans.pcd
src/sentry_localization/fast_lio_localization_sc_qn/: CMakeLists.txt
src/sentry_localization/fast_lio_sam_sc_qn/: CMakeLists.txt  result.bag  result.pcd
src/sentry_localization/include/: std_cout.h
src/sentry_localization/launch/: all.launch  amcl.launch  initialpose.launch  livox_repub.launch  pcl_to_scan.launch  sentry_localization.launch  small_gicp.launch
src/sentry_localization/map/: Mesh.las  Mesh.vtk  RMUC.pgm  RMUC.yaml  RMUC_20000.pcd
src/sentry_localization/point_lio/: CMakeLists.txt
src/sentry_localization/relocalization/: CMakeLists.txt  package.xml
src/sentry_localization/rviz/: sentry_localization.rviz  test.rviz
src/sentry_localization/scqn/: CMakeLists.txt  package.xml
src/sentry_localization/scqn_sam/: CMakeLists.txt  package.xml  r.rviz
src/sentry_localization/small_gicp_relocalization/: CMakeLists.txt  package.xml
src/sentry_localization/src/: initialpose_node.cpp  livox_repub.cpp  small_gicp_relocalization.cpp  test.cpp
src/sentry_navigation/: CMakeLists.txt  nodelets.xml  package.xml  recovery_plugin.xml
src/sentry_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml  test_analysis.yaml
src/sentry_navigation/include/: gimbal_serial.hpp  terrain_analysis.hpp  terrian_analysis.hpp
src/sentry_navigation/launch/: all.launch  livox_turn.launch  mbf.launch  nav_sentry.launch  sentry_navigation.launch  terrain_analysis.launch  test.launch  test_analysis.launch  test_stc.launch
src/sentry_navigation/map/: RMUC.pgm  RMUC.yaml  rmuc_2024.pgm  rmuc_2024.yaml  rmuc_2025.pgm  rmuc_2025.yaml  test.pgm  test.yaml
src/sentry_navigation/mbf_nav/: CMakeLists.txt  package.xml
src/sentry_navigation/move_freespace_recovery/: CMakeLists.txt  package.xml
src/sentry_navigation/msg/: refree.msg
src/sentry_navigation/rviz/: mbf_rviz.rviz  sentry_navigation.rviz
src/sentry_navigation/src/: mbf_bridge.cpp  pointcloud_to_laserscan.cpp  scan_to_scan_filter.cpp  terrian_analysis.cpp  test.cpp  test_goal.cpp  test_recovery.cpp
src/sentry_navigation_core/path_controller/: CMakeLists.txt  package.xml  pid_controller_plugin.xml
src/sentry_perception/ground_segmentation/: CMakeLists.txt  package.xml
src/sentry_perception/livox_msgs_convert/: CMakeLists.txt  package.xml
src/sentry_perception/pcd2gridmap/: CMakeLists.txt  package.xml
src/sentry_perception/terrain_analysis/: CMakeLists.txt  package.xml
src/sentry_simulation/: CMakeLists.txt  package.xml
src/sentry_simulation/config/: joint_velocity.yaml
src/sentry_simulation/launch/: all.launch  teleop_keyboard_ctrl.launch  view_sentry.launch
src/sentry_simulation/livox_laser_simulation/: CMakeLists.txt  package.xml
src/sentry_simulation/mecanum_driver/: mecanumDriver.hpp
src/sentry_simulation/mesh/: mid360.stl  rmuc_2024.stl
src/sentry_simulation/plugin/: main.cc
src/sentry_simulation/rviz/: sentry_omni.rviz
src/sentry_simulation/sentry_description/: CMakeLists.txt  package.xml
src/sentry_simulation/src/: telelop_keyboard_ctrl.cpp
src/sentry_simulation/urdf/: imu.urdf.xacro  livox_mid360.urdf.xacro  main.urdf.xacro  omni.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro  sensor.urdf.xacro  sentry.urdf.xacro  sentry_acker.urdf.xacro  sentry_base.urdf.xacro  sentry_velodyne.urdf.xacro  test.urdf.xacro  wheel.urdf.xacro
src/sentry_simulation/world/: RMUC2024.world  RMUC2025.world  rmuc2024.world  rmuc2025.world
src/trajectory_optimization/: CMakeLists.txt  package.xml
src/trajectory_optimization/include/: bezier_base.h  bezier_generator3d.h  corridor_generate.h  data_type.h  grid_map.h  lbfgs.hpp  minco.hpp  stc_gen.hpp  test_stc.hpp  traj_optimize3d.h  traj_search3d.h  trajectory.hpp
src/trajectory_optimization/launch/: optimize_visual.launch  optimize_visual_debug.launch  optimize_visual_valgrind.launch  rviz.launch  test.rviz
src/trajectory_optimization/rviz_plugins/: sub_publishpoint.cpp
src/trajectory_optimization/src/: bezier_base.cpp  bezier_generator3d.cpp  corridor_generate.cpp  grid_map.cpp  main.cpp  test_stc.cpp  traj_optimize3d.cpp  traj_search3d.cpp
(+260 files in other folders)
