<?xml version="1.0"?>
<package format="2">
  <name>sentry_localization</name>
  <version>0.0.0</version>
  <description>The sentry_localization package</description>

  <maintainer email="bismarck@todo.todo">bismarck</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver2</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>


  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>livox_ros_driver2</build_export_depend>
  <build_export_depend>filters</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>


  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  


  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>