<?xml version="1.0"?>
<package format="2">
  <name>small_gicp_relocalization</name>
  <version>0.0.0</version>
  <description>The small_gicp_relocalization package</description>
  <maintainer email="jgy@todo.todo">jgy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <export>
  </export>
  
</package>
